--- a/src/GigHub/Views/Gigs/Create.cshtml
+++ b/src/GigHub/Views/Gigs/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Add a Gig</h2>
 
-<form asp-action="Create" asp-controller="Gigs">
+<form asp-action="Create" asp-controller="Gigs" asp-antiforgery="true">
     <div class="form-horizontal">
         <h4>Gig</h4>
         <hr />
