--- a/src/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/src/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,18 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello  @UserManager.GetUserName(User)!<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Gigs I'm Going</a></li>
+                    <li><a href="#">Artists I'm Following</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li>
+                        <a href="#" type="submit">Log off</a>
+                    </li>
+                </ul>
             </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
-            </li>
+
         </ul>
     </form>
 }
