--- a/src/GigHub/Views/Home/Index.cshtml
+++ b/src/GigHub/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@{
+﻿@model IEnumerable<GigHub.Models.Gig>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+<ul>
+    @foreach (var gig in Model)
+    {
+        <li>@gig.DateTime - @gig.Artist.Name</li>
+    }
+</ul>
+
+@*<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -106,4 +115,4 @@
             <li><a href="http://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
         </ul>
     </div>
-</div>
+</div>*@
