--- a/src/GigHub/wwwroot/css/site.css
+++ b/src/GigHub/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 90px;
     padding-bottom: 20px;
 }
 
@@ -105,3 +105,53 @@ h6,
     -ms-border-radius: 9px;
     border-radius: 9px;
 }*/
+
+
+/* Page Level Styles */
+
+.gigs {
+    list-style: none;
+}
+
+.gigs > li {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.gigs > li .date {
+    background: red;
+    color: white;
+    text-align: center;
+    width: 60px;
+    -ms-border-radius: 8px;
+    border-radius: 8px;
+}
+
+.gigs > li .date .month {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 2px 6px;
+}
+
+    .gigs > li .date .day {
+        background: #f7f7f7;
+        color:#333;
+        font-size: 20px;
+        padding: 6px 12px;
+    }
+
+.gigs > li .details {
+    position: absolute;
+    top: 0;
+    left: 70px;
+}
+
+    .gigs > li .details .artist {
+        font-weight: bold;
+        display: block;
+    }
+
+    .gigs > li .details .genre {
+        font-size: 13px;
+    }
