--- a/src/GigHub/Views/Home/Index.cshtml
+++ b/src/GigHub/Views/Home/Index.cshtml
@@ -19,10 +19,36 @@
             <div class="details">
                 <span class="artist">@gig.Artist.Name</span>
                 <span class="genre">@gig.Genre.Name</span>
+                <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going?</button>
             </div>
         </li>
     }
 </ul>
+
+@section scripts{
+    <script>
+        $(document).ready(function() {
+            $(".js-toggle-attendance").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/attendances", button.attr("data-gig-id"))
+                    .done(function() {
+                        button
+                            .removeClass("btn-default")
+                            .addClass("btn-info")
+                            .text("Going");
+                    })
+                    .fail(function() {
+                        alert("Something failed!");
+                    });
+            });
+        });
+    </script>
+}
+
+
+
+
+
 
 @*@gig.DateTime - @gig.Artist.Name
         <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
