--- a/src/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/src/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                     <li><a href="#">Artists I'm Following</a></li>
                     <li role="separator" class="divider"></li>
                     <li>
-                        <a href="#" type="submit">Log off</a>
+                        <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
                     </li>
                 </ul>
             </li>
