--- a/src/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/src/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello  @UserManager.GetUserName(User)!<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Gigs I'm Going</a></li>
+                    <li><a href="@Url.Action("Attending", "Gigs")">Gigs I'm Going</a></li>
                     <li><a href="#">Artists I'm Following</a></li>
                     <li role="separator" class="divider"></li>
                     <li>
