--- a/src/GigHub/Views/Gigs/Mine.cshtml
+++ b/src/GigHub/Views/Gigs/Mine.cshtml
@@ -26,6 +26,11 @@
                 <span class="genre">
                     @gig.Genre.Name
                 </span>
+                <div class="actions">
+                    <a href="@Url.Action("Edit", "Gigs", new { id=gig.Id })">
+                        Edit
+                    </a>
+                </div>
             </div>
         </li>
     }
