--- a/src/GigHub/Views/Gigs/Mine.cshtml
+++ b/src/GigHub/Views/Gigs/Mine.cshtml
@@ -27,11 +27,59 @@
                     @gig.Genre.Name
                 </span>
                 <div class="actions">
-                    <a href="@Url.Action("Edit", "Gigs", new { id=gig.Id })">
+                    <a href="@Url.Action("Edit", "Gigs", new {id = gig.Id})">
                         Edit
+                    </a> |
+                    <a href="#" class="js-cancel-gig" data-gig-id="@gig.Id">
+                        Cancel
                     </a>
                 </div>
             </div>
         </li>
     }
 </ul>
+
+@section scripts {
+    <script>
+        $(document)
+            .ready(function() {
+                $(".js-cancel-gig")
+                    .click(function(e) {
+                        var link = $(e.target);
+
+                        bootbox.dialog({
+                            message: "Are you sure you want to cancel this gig?",
+                            title: "Confirm",
+                            buttons: {
+                                no: {
+                                    label: "No",
+                                    className: "btn-default",
+                                    callback: function() {
+                                        bootbox.hideAll();
+                                    }
+                                },
+                                yes: {
+                                    label: "Yes",
+                                    className: "btn-danger",
+                                    callback: function() {
+                                        $.ajax({
+                                                url: "/api/gigs/" + link.attr("data-gig-id"),
+                                                method: "DELETE"
+                                            })
+                                            .done(function() {
+                                                link.parents("li")
+                                                    .fadeOut(function() {
+                                                        $(this).remove();
+                                                    })
+                                            })
+                                            .fail(function() {
+                                                alert("Something Failed!");
+                                            });
+                                    }
+                                }
+                            }
+                        });
+                    });
+            })
+    </script>
+}
