--- a/src/GigHub/Views/Shared/Gigs.cshtml
+++ b/src/GigHub/Views/Shared/Gigs.cshtml
@@ -20,7 +20,11 @@
             <div class="details">
                 <span class="artist">
                     @gig.Artist.Name
-
+                    
+                    @if (gig.IsCancelled)
+                    {
+                        <span class="label lebel-warning">Canelled</span>
+                    }
                     @if (Model.ShowActions)
                     {
                         <button class="btn btn-link btn-sm js-toggle-follow" data-user-id="@gig.ArtistId">Follow</button>
@@ -29,7 +33,7 @@
                 <span class="genre">
                     @gig.Genre.Name
                 </span>
-                @if (Model.ShowActions)
+                @if (Model.ShowActions && !gig.IsCancelled)
                 {
                     <button data-gig-id="@gig.Id" class="btn btn-default btn-sm pull-right js-toggle-attendance">Going?</button>
                 }
