--- a/src/GigHub/Views/Shared/_Layout.cshtml
+++ b/src/GigHub/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/bootbox.min.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -63,6 +64,7 @@
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/bootbox.min.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("scripts", required: false)
