--- a/src/GigHub/Views/Gigs/Mine.cshtml
+++ b/src/GigHub/Views/Gigs/Mine.cshtml
@@ -40,46 +40,44 @@
 </ul>
 
 @section scripts {
-    <script>
-        $(document)
-            .ready(function() {
-                $(".js-cancel-gig")
-                    .click(function(e) {
-                        var link = $(e.target);
+<script>
+    $(document).ready(function () {
+        $(".js-cancel-gig").click(function (e) {
+            var link = $(e.target);
 
-                        bootbox.dialog({
-                            message: "Are you sure you want to cancel this gig?",
-                            title: "Confirm",
-                            buttons: {
-                                no: {
-                                    label: "No",
-                                    className: "btn-default",
-                                    callback: function() {
-                                        bootbox.hideAll();
-                                    }
-                                },
-                                yes: {
-                                    label: "Yes",
-                                    className: "btn-danger",
-                                    callback: function() {
-                                        $.ajax({
-                                                url: "/api/gigs/" + link.attr("data-gig-id"),
-                                                method: "DELETE"
-                                            })
-                                            .done(function() {
-                                                link.parents("li")
-                                                    .fadeOut(function() {
-                                                        $(this).remove();
-                                                    })
-                                            })
-                                            .fail(function() {
-                                                alert("Something Failed!");
-                                            });
-                                    }
-                                }
-                            }
-                        });
-                    });
-            })
-    </script>
+            bootbox.dialog({
+                message: "Are you sure you want to cancel this gig?",
+                title: "Confirm",
+                buttons: {
+                    no: {
+                        label: "No",
+                        className: "btn-default",
+                        callback: function () {
+                            bootbox.hideAll();
+                        }
+                    },
+                    yes: {
+                        label: "Yes",
+                        className: "btn-danger",
+                        callback: function () {
+                            $.ajax({
+                                url: "/api/gigs/" + link.attr("data-gig-id"),
+                                method: "DELETE"
+                            })
+                            .done(function () {
+                                link.parents("li")
+                                    .fadeOut(function () {
+                                        $(this).remove();
+                                    });
+                            })
+                            .fail(function () {
+                                alert("Something Failed!");
+                            });
+                        }
+                    }
+                }
+            });
+        });
+    });
+</script>
 }
