--- a/src/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/src/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -5,8 +5,14 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            <li class="notifications">
+                <a href="#">
+                    <i class="glyphicon glyphicon-globe"></i>
+                    <span class="badge js-notifications-count hide"></span>
+                </a>
+            </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello  @UserManager.GetUserName(User)!<span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello @UserManager.GetUserName(User)!<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="@Url.Action("Mine", "Gigs")">My Upcoming Gigs</a></li>
                     <li><a href="@Url.Action("Attending", "Gigs")">Gigs I'm Going</a></li>
