--- a/src/GigHub/wwwroot/css/site.css
+++ b/src/GigHub/wwwroot/css/site.css
@@ -1,173 +1,123 @@
 ﻿body {
-    padding-top: 90px;
-    padding-bottom: 20px;
+  padding-top: 90px;
+  padding-bottom: 20px;
 }
-
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
-
-/* Set widths on the form inputs since otherwise they're 100% wide */
 input,
 select,
 textarea {
-    max-width: 280px;
+  max-width: 280px;
 }
-
-/* Carousel */
 .carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
+  font-size: 20px;
+  line-height: 1.4;
 }
-
-/* buttons and links extension to use brackets: [ click me ] */
 .btn-bracketed::before {
-    display:inline-block;
-    content: "[";
-    padding-right: 0.5em;
+  display: inline-block;
+  content: "[";
+  padding-right: 0.5em;
 }
 .btn-bracketed::after {
-    display:inline-block;
-    content: "]";
-    padding-left: 0.5em;
+  display: inline-block;
+  content: "]";
+  padding-left: 0.5em;
 }
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"]
-{
-    width: 100%;
+.carousel-inner .item img[src$=".svg"] {
+  width: 100%;
 }
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-  /* Hide captions */
-  .carousel-caption {
-    display: none
-  }
+.voffset {
+  margin-top: 2px;
 }
-
-.voffset { margin-top: 2px; }
-.voffset1 { margin-top: 5px; }
-.voffset2 { margin-top: 10px; }
-.voffset3 { margin-top: 20px; }
-.voffset4 { margin-top: 40px; }
-.voffset5 { margin-top: 80px; }
-
-/* Bootstrap Overides*/
-
-/*.navbar-inverse {
-    background-color: #ff4342;
-    border-color: #ff4342;
+.voffset1 {
+  margin-top: 5px;
 }
-
-.navbar-inverse .navbar-nav > li > a {
-    color: #fff;
+.voffset2 {
+  margin-top: 10px;
 }
-
-.navbar-inverse .navbar-brand {
-    color: #fff;
+.voffset3 {
+  margin-top: 20px;
 }
-
-.navbar-inverse .navbar-link {
-    color: #fff;
-}*/
-
-/*body {
-    font-size: 16px;
+.voffset4 {
+  margin-top: 40px;
 }
-
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+.voffset5 {
+  margin-top: 80px;
 }
-
-.form-group {
-    margin-bottom: 20px;
+.navbar-inverse .notifications {
+  position: relative;
 }
-
-.form-control {
-    font-size: 17px;
-    padding: 20px 15px;
-    -ms-border-radius: 4px;
-    border-radius: 4px;
+.navbar-inverse .notifications .badge {
+  position: absolute;
+  top: 8px;
+  right: 0;
+  background: #a80a0a;
 }
-
-.btn {
-    font-size: 17px;
-    padding: 7px 20px;
-    -ms-border-radius: 9px;
-    border-radius: 9px;
-}*/
-
-
-/* Page Level Styles */
-
 .gigs {
-    list-style: none;
+  list-style: none;
 }
-
 .gigs > li {
-    position: relative;
-    margin-bottom: 30px;
+  position: relative;
+  margin-bottom: 30px;
 }
-
 .gigs > li .date {
-    background: red;
-    color: white;
-    text-align: center;
-    width: 60px;
-    -ms-border-radius: 8px;
-    border-radius: 8px;
+  background: red;
+  color: white;
+  text-align: center;
+  width: 60px;
+  -ms-border-radius: 8px;
+  border-radius: 8px;
 }
-
 .gigs > li .date .month {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 2px 6px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 2px 6px;
 }
-
-    .gigs > li .date .day {
-        background: #f7f7f7;
-        color:#333;
-        font-size: 20px;
-        padding: 6px 12px;
-    }
-
+.gigs > li .date .day {
+  background: #f7f7f7;
+  color: #333333;
+  font-size: 20px;
+  padding: 6px 12px;
+}
 .gigs > li .details {
-    position: absolute;
-    top: 0;
-    left: 70px;
+  position: absolute;
+  top: 0;
+  left: 70px;
 }
-
-    .gigs > li .details .artist {
-        font-weight: bold;
-        display: block;
-    }
-
-    .gigs > li .details .genre {
-        font-size: 13px;
-    }
-
+.gigs > li .details .artist {
+  font-weight: bold;
+  display: block;
+}
+.gigs > li .details .genre {
+  font-size: 13px;
+}
 .gigs > li .actions {
-    font-size: 12px;
-    display: none;
+  font-size: 12px;
+  display: none;
 }
-
 .gigs > li:hover .actions {
-    display: block;
+  display: block;
+}
+.popover-notifications .popover-content {
+  padding: 0;
+}
+.popover-notifications ul.notifications {
+  list-style: none;
+  padding: 0;
+}
+.popover-notifications ul.notifications > li {
+  border-bottom: 1px solid #dddddd;
+  padding: 10px;
+}
+.popover-notifications ul.notifications > li:last-child {
+  border-bottom: none;
+}
+.popover-notifications ul.notifications .highlight {
+  font-weight: bold;
+}
+#searchGigs {
+  width: 300px;
 }
