--- a/src/GigHub/wwwroot/css/site.less
+++ b/src/GigHub/wwwroot/css/site.less
@@ -88,6 +88,8 @@ input, select, textarea {
       }
       .genre {
         font-size:13px;
+        display: block;
+        margin-bottom: 4px;
       }
     }
     .actions {
