Implement IUnitOfWork and Repo Pattern

--- a/src/GigHub/Views/Gigs/Details.cshtml
+++ b/src/GigHub/Views/Gigs/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model GigHub.ViewModels.GigDetailsViewModel
+﻿@using GigHub.ViewModels.GigViewModels
+@model GigHub.ViewModels.GigViewModels.GigDetailsViewModel
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_layout.cshtml";
