--- a/src/GigHub/Views/Gigs/GigForm.cshtml
+++ b/src/GigHub/Views/Gigs/GigForm.cshtml
@@ -1,4 +1,5 @@
-@model GigHub.Models.GigViewModels.GigFormViewModel
+@using GigHub.ViewModels.GigViewModels
+@model GigHub.ViewModels.GigViewModels.GigFormViewModel
 
 @{
     ViewData["Title"] = Model.Heading;
