--- a/src/GigHub/Views/Shared/Gigs.cshtml
+++ b/src/GigHub/Views/Shared/Gigs.cshtml
@@ -1,4 +1,5 @@
-﻿@model GigHub.ViewModels.GigsViewModel
+﻿@using GigHub.ViewModels.GigViewModels
+@model GigHub.ViewModels.GigViewModels.GigsViewModel
 
 @{
     ViewData["Title"] = "Home Page";
